--- a/tmpl/default.css
+++ b/tmpl/default.css
@@ -1,15 +1,16 @@
 .mod_wow_top_weekly_contributors {
     width: 100%;
+    table-layout: fixed;
 }
 
 .mod_wow_top_weekly_contributors td,
 .mod_wow_top_weekly_contributors th {
-    padding: 2px;
+    text-align: center;
+    white-space: nowrap;
 }
 
-.mod_wow_top_weekly_contributors .place,
-.mod_wow_top_weekly_contributors .level,
-.mod_wow_top_weekly_contributors .class,
-.mod_wow_top_weekly_contributors .points {
-    text-align: center;
+.mod_wow_top_weekly_contributors .name {
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
