--- a/tmpl/default.css
+++ b/tmpl/default.css
@@ -9,6 +9,10 @@
     white-space: nowrap;
 }
 
+.mod_wow_top_weekly_contributors .name img {
+    vertical-align: sub;
+}
+
 .mod_wow_top_weekly_contributors .name {
     text-align: left;
     overflow: hidden;
